--- a/fuuu/res/layout/activity_main.xml
+++ b/fuuu/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
@@ -11,12 +12,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:orientation="vertical" >
-        
-        <fragment
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>
+
+        <fragment      
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <CheckBox
             android:id="@+id/checkBox1"
@@ -68,7 +69,6 @@
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="Button2" />
-
     </LinearLayout>
 
 </RelativeLayout>
