--- a/Kreator/res/layout/diy_edit.xml
+++ b/Kreator/res/layout/diy_edit.xml
@@ -20,10 +20,19 @@
 	<TextView android:layout_width="wrap_content"
 		android:layout_height="wrap_content" 
 		android:text="@string/body" />
-	<EditText android:id="@+id/body" android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:scrollbars="vertical" />
+
+	<EditText
+	    android:id="@+id/body"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="0.79"
+	    android:scrollbars="vertical" />
+
+	<CheckBox
+	    android:id="@+id/enabled"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="Enabled" />
 	
 	<Button android:id="@+id/confirm" 
 	  android:text="@string/confirm"
