--- a/Kreator/res/layout/diy_edit.xml
+++ b/Kreator/res/layout/diy_edit.xml
@@ -34,10 +34,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/body" />
+            android:text="@string/description" />
 
         <EditText
-            android:id="@+id/body"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.79"
