--- a/Kreator/res/layout/activity_diy_edit_triggers.xml
+++ b/Kreator/res/layout/activity_diy_edit_triggers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,16 +18,95 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-		    <TextView 
-		        android:id="@+id/label_trigger_example_param_1"
-		        android:layout_width="wrap_content" 
-		        android:layout_height="wrap_content" 
-		        android:text="trigger_example_param_1"
-		        android:layout_alignParentLeft="true"
-		        android:layout_alignParentTop="true"/> 
+            <TextView
+                android:id="@+id/label_trigger_example_param_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="trigger_example_param_1" />
 
             <EditText
                 android:id="@+id/trigger_example_param_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/trigger_location_enabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="trigger_location" />
+
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Map"
+                android:onClick="showMap" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/label_location_example_param_latitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="trigger_example_param_latitude" />
+
+            <EditText
+                android:id="@+id/trigger_location_param_latitude"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/label_location_example_param_longtitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="trigger_example_param_longtitude" />
+
+            <EditText
+                android:id="@+id/trigger_location_param_longtitude"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/label_location_example_param_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="trigger_example_param_area" />
+
+            <EditText
+                android:id="@+id/trigger_location_param_area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -98,7 +178,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button" />
-
     </LinearLayout>
 
 </ScrollView>
