--- a/fakeDIYa/res/layout/activity_fake_diya.xml
+++ b/fakeDIYa/res/layout/activity_fake_diya.xml
@@ -102,14 +102,39 @@
         android:text="Text GPS"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <Button
-        android:id="@+id/button1"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/buttonGPS"
-        android:layout_alignBottom="@+id/buttonGPS"
-        android:layout_toRightOf="@+id/buttonGPS"
-        android:onClick="showDb"
-        android:text="DB" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textGPS"
+        android:text="New FakeDIYa"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView3"
+        android:text="New is always better."
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <Button
+        android:id="@+id/buttonTriggers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView4"
+        android:text="Triggers" />
+
+    <Button
+        android:id="@+id/buttonActions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/buttonTriggers"
+        android:layout_alignBottom="@+id/buttonTriggers"
+        android:layout_toRightOf="@+id/textView4"
+        android:text="Actions" />
 
 </RelativeLayout>
