--- a/Kreator/res/layout/activity_diy_edit_triggers.xml
+++ b/Kreator/res/layout/activity_diy_edit_triggers.xml
@@ -7,12 +7,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+        
+        <!-- spacer -->
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <ToggleButton
-            android:id="@+id/trigger_example_enabled"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="trigger_example" />
+            <ToggleButton
+                android:id="@+id/trigger_example_enabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="trigger_example" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="Example"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,13 +165,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
+
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="showDatePickerFrom"
                 android:text="From" />
-            
+
             <TextView
                 android:id="@+id/trigger_date_param_from"
                 android:layout_width="match_parent"
@@ -164,13 +184,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
+
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="showDatePickerTo"
                 android:text="To" />
-            
 
             <TextView
                 android:id="@+id/trigger_date_param_to"
@@ -179,8 +199,51 @@
                 android:layout_weight="1"
                 android:ems="10" />
         </LinearLayout>
+        
+        <!-- spacer -->
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
+            <ToggleButton
+                android:id="@+id/trigger_wifi_enabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="trigger_wifi" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="WiFi"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/label_trigger_wifi_param_ssid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="SSID" />
+
+            <EditText
+                android:id="@+id/trigger_wifi_param_ssid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
