add wifi action

--- a/Kreator/res/layout/activity_diy_edit_triggers.xml
+++ b/Kreator/res/layout/activity_diy_edit_triggers.xml
@@ -52,6 +52,7 @@
                 android:layout_weight="1"
                 android:ems="10" />
         </LinearLayout>
+        <!-- break -->
 
         <View
             android:layout_width="fill_parent"
