--- a/Kreator/res/layout/activity_diy_edit_actions.xml
+++ b/Kreator/res/layout/activity_diy_edit_actions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -8,7 +9,7 @@
         android:orientation="vertical" >
 
         <ToggleButton
-            android:id="@+id/action_example_enabled"
+            android:id="@+id/action_example"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="action_example" />
@@ -17,13 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-		    <TextView 
-		        android:id="@+id/label_action_example_param_1"
-		        android:layout_width="wrap_content" 
-		        android:layout_height="wrap_content" 
-		        android:text="action_example_param_1"
-		        android:layout_alignParentLeft="true"
-		        android:layout_alignParentTop="true"/> 
+            <TextView
+                android:id="@+id/label_action_example_param_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="action_example_param_1" />
 
             <EditText
                 android:id="@+id/action_example_param_1"
@@ -32,6 +33,96 @@
                 android:layout_weight="1"
                 android:ems="10" />
         </LinearLayout>
+
+        <!-- spacer -->
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ToggleButton
+                android:id="@+id/action_wifi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="WiFi" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="WiFi"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+
+        <!--
+        <RadioGroup
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/radio_pirates"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onRadioButtonClicked"
+                android:text="pirates" />
+
+            <RadioButton
+                android:id="@+id/radio_ninjas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onRadioButtonClicked"
+                android:text="ninjas" />
+        </RadioGroup>
+        -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/action_wifi_param_turn_on"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:text="turn on" />
+
+            <CheckBox
+                android:id="@+id/action_wifi_param_turn_off"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:text="turn off" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/label_action_wifi_param_ssid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="connect SSID" />
+
+            <EditText
+                android:id="@+id/action_wifi_param_ssid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" />
+        </LinearLayout>
+        <!-- break -->
     </LinearLayout>
 
 </ScrollView>
