add soundprofile action

--- a/Kreator/res/layout/activity_diy_edit_actions.xml
+++ b/Kreator/res/layout/activity_diy_edit_actions.xml
@@ -193,7 +193,7 @@
         <!-- break -->
 
 
-        <!-- spacer current -->
+        <!-- spacer -->
 
         <View
             android:layout_width="fill_parent"
@@ -238,48 +238,100 @@
                 android:layout_weight="1"
                 android:ems="10" />
         </LinearLayout>
-            <!-- checkboxes -->
+        <!-- checkboxes -->
+
+        <CheckBox
+            android:id="@+id/action_widgettext_param_display_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:text="date" />
+
+        <CheckBox
+            android:id="@+id/action_widgettext_param_display_coordinates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:text="coordinates" />
+
+        <CheckBox
+            android:id="@+id/action_widgettext_param_display_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:text="address" />
+
+        <CheckBox
+            android:id="@+id/action_widgettext_param_display_wifissid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:text="wifi ssid" />
+
+        <CheckBox
+            android:id="@+id/action_widgettext_param_display_action_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:text="action_description" />
+
+        <!-- break -->
+        <!-- spacer  current -->
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ToggleButton
+                android:id="@+id/action_soundprofile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sound Profile" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="soundprofile"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <CheckBox
-                android:id="@+id/action_widgettext_param_display_date"
+                android:id="@+id/action_soundprofile_param_profile_sound"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:text="date" />
+                android:text="Sound" />
 
             <CheckBox
-                android:id="@+id/action_widgettext_param_display_coordinates"
+                android:id="@+id/action_soundprofile_param_profile_vibrations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:text="coordinates" />
+                android:text="Vibrations" />
+        </LinearLayout>
 
-            <CheckBox
-                android:id="@+id/action_widgettext_param_display_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:text="address" />
-
-            <CheckBox
-                android:id="@+id/action_widgettext_param_display_wifissid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:text="wifi ssid" />
-
-            <CheckBox
-                android:id="@+id/action_widgettext_param_display_action_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:text="action_description" />
-
+        <SeekBar
+            android:id="@+id/action_soundprofile_param_volume"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <!-- break -->
 
     </LinearLayout>
