remove example from triggers

--- a/Kreator/res/layout/activity_diy_edit_actions.xml
+++ b/Kreator/res/layout/activity_diy_edit_actions.xml
@@ -277,7 +277,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:text="soundprofile"
+                android:text="Sound Profile"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </LinearLayout>
 
