--- a/Kreator/res/layout/diy_edit.xml
+++ b/Kreator/res/layout/diy_edit.xml
@@ -8,11 +8,29 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <ToggleButton
-            android:id="@+id/enabled"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enabled" />
+            android:orientation="horizontal" >
+
+            <ToggleButton
+                android:id="@+id/enabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enabled" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enable this DIY" 
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+        </LinearLayout>
+        <!-- spacer -->
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,6 +60,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.79"
             android:scrollbars="vertical" />
+        <!-- spacer -->
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            android:background="@drawable/i1x1" />
 
         <Button
             android:id="@+id/confirm"
