--- a/Kreator/res/layout/activity_diy_edit_actions.xml
+++ b/Kreator/res/layout/activity_diy_edit_actions.xml
@@ -26,7 +26,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:text="WiFi"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"             />
         </LinearLayout>
 
         <!--
@@ -300,8 +300,12 @@
         <SeekBar
             android:id="@+id/action_soundprofile_param_volume"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-            android:max="10" />
+            android:layout_height="wrap_content"
+            android:max="10"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+             />
+
         <!-- break -->
 
     </LinearLayout>
